overflow hidden mob fix

--- a/02. Color Palette Generator UI Design/style.css
+++ b/02. Color Palette Generator UI Design/style.css
@@ -162,6 +162,9 @@ body {
 }
 
 @media (max-width: 680px) {
+    body {
+        overflow: auto;
+    }
 
     .colour-value{
         margin: 10px 5px;
